--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,6 @@
 # config
 !.config
 !.config/*
-!.config/*/*
 
 # sakura config
 !.config/sakura/*
@@ -59,6 +58,15 @@
 
 # i3blocks config
 !.config/i3blocks/*
+
+# zathura config
+!.config/zathura/*
+
+# ulauncher config
+!.config/ulauncher/*
+
+# lxqt config
+!.config/lxqt/*
 
 # X resources
 !.Xresources
