--- a/.config/sway/config
+++ b/.config/sway/config
@@ -61,8 +61,8 @@ output * bg $bg fill
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
-output eDP-1 resolution 1920x1080 position 0,0
-output DP-1 resolution 1920x1200 position 1920,0
+# output WLC-1 resolution 1920x1080 position 0,0
+# output DP-1 resolution 1920x1200 position 1920,0
 
 ### Input configuration
 #
