--- a/.config/lxqt/lxqt-powermanagement.conf
+++ b/.config/lxqt/lxqt-powermanagement.conf
@@ -1,6 +1,18 @@
 [General]
 __userfile__=true
 enableBatteryWatcher=true
+enableExtMonLidClosedActions=true
 enableIdlenessWatcher=true
 enableLidWatcher=true
+idlenessAction=-2
+idlenessTimeSecs=900
+lidClosedAcAction=-1
+lidClosedAction=-2
+lidClosedExtMonAcAction=-1
+lidClosedExtMonAction=-1
+powerLowAction=-1
+powerLowLevel=10
+powerLowWarning=30
 runCheckLevel=1
+showIcon=true
+useThemeIcons=true
