--- a/.config/lxqt/lxqt.conf
+++ b/.config/lxqt/lxqt.conf
@@ -1,6 +1,8 @@
 [General]
 __userfile__=true
 icon_theme=Enlightenment-X
+theme=light
 
 [Qt]
+font="Inconsolata,13,-1,5,50,0,0,0,0,0"
 style=Fusion
