--- a/.config/lxqt/globalkeyshortcuts.conf
+++ b/.config/lxqt/globalkeyshortcuts.conf
@@ -6,6 +6,56 @@ AllowGrabMiscKeypad=true
 AllowGrabMiscSpecial=true
 MultipleActionsBehaviour=first
 
+[Alt%2B0.8]
+Comment=Switch to desktop 10
+Enabled=true
+path=/panel/desktopswitch/desktop_10
+
+[Alt%2B1.7]
+Comment=Switch to desktop 1
+Enabled=true
+path=/panel/desktopswitch/desktop_1
+
+[Alt%2B2.11]
+Comment=Switch to desktop 2
+Enabled=true
+path=/panel/desktopswitch/desktop_2
+
+[Alt%2B3.12]
+Comment=Switch to desktop 3
+Enabled=true
+path=/panel/desktopswitch/desktop_3
+
+[Alt%2B4.13]
+Comment=Switch to desktop 4
+Enabled=true
+path=/panel/desktopswitch/desktop_4
+
+[Alt%2B5.14]
+Comment=Switch to desktop 5
+Enabled=true
+path=/panel/desktopswitch/desktop_5
+
+[Alt%2B6.15]
+Comment=Switch to desktop 6
+Enabled=true
+path=/panel/desktopswitch/desktop_6
+
+[Alt%2B7.16]
+Comment=Switch to desktop 7
+Enabled=true
+path=/panel/desktopswitch/desktop_7
+
+[Alt%2B8.17]
+Comment=Switch to desktop 8
+Enabled=true
+path=/panel/desktopswitch/desktop_8
+
+[Alt%2B9.18]
+Comment=Switch to desktop 9
+Enabled=true
+path=/panel/desktopswitch/desktop_9
+
 [Alt%2BF1.1]
 Comment=Show/hide main menu
 Enabled=true
@@ -15,6 +65,21 @@ path=/panel/mainmenu/show_hide
 Comment=Show/hide runner dialog
 Enabled=true
 path=/runner/show_hide_dialog
+
+[Alt%2BF5.38]
+Comment=Play pause
+Enabled=true
+Exec=playerctl, play-pause
+
+[Alt%2BF6.37]
+Comment=Skip
+Enabled=true
+Exec=playerctl, next
+
+[Alt%2BReturn.6]
+Comment=urxvt
+Enabled=true
+Exec=urxvt
 
 [Control%2BAlt%2BD.3]
 Comment=Show desktop
@@ -31,21 +96,6 @@ Comment=Web browser
 Enabled=true
 Exec=xdg-open, about:blank
 
-[Control%2BAlt%2BT.6]
-Comment=QTerminal
-Enabled=true
-Exec=qterminal
-
-[Control%2BF1.7]
-Comment=Switch to desktop 1
-Enabled=true
-path=/panel/desktopswitch/desktop_1
-
-[Control%2BF10.8]
-Comment=Switch to desktop 10
-Enabled=true
-path=/panel/desktopswitch/desktop_10
-
 [Control%2BF11.9]
 Comment=Switch to desktop 11
 Enabled=true
@@ -55,46 +105,6 @@ path=/panel/desktopswitch/desktop_11
 Comment=Switch to desktop 12
 Enabled=true
 path=/panel/desktopswitch/desktop_12
-
-[Control%2BF2.11]
-Comment=Switch to desktop 2
-Enabled=true
-path=/panel/desktopswitch/desktop_2
-
-[Control%2BF3.12]
-Comment=Switch to desktop 3
-Enabled=true
-path=/panel/desktopswitch/desktop_3
-
-[Control%2BF4.13]
-Comment=Switch to desktop 4
-Enabled=true
-path=/panel/desktopswitch/desktop_4
-
-[Control%2BF5.14]
-Comment=Switch to desktop 5
-Enabled=true
-path=/panel/desktopswitch/desktop_5
-
-[Control%2BF6.15]
-Comment=Switch to desktop 6
-Enabled=true
-path=/panel/desktopswitch/desktop_6
-
-[Control%2BF7.16]
-Comment=Switch to desktop 7
-Enabled=true
-path=/panel/desktopswitch/desktop_7
-
-[Control%2BF8.17]
-Comment=Switch to desktop 8
-Enabled=true
-path=/panel/desktopswitch/desktop_8
-
-[Control%2BF9.18]
-Comment=Switch to desktop 9
-Enabled=true
-path=/panel/desktopswitch/desktop_9
 
 [Meta%2B0.19]
 Comment=Activate task 10
