--- a/.config/lxqt/globalkeyshortcuts.conf
+++ b/.config/lxqt/globalkeyshortcuts.conf
@@ -6,192 +6,187 @@ AllowGrabMiscKeypad=true
 AllowGrabMiscSpecial=true
 MultipleActionsBehaviour=first
 
-[Alt%2B0.8]
+[Alt%2B0.1]
 Comment=Switch to desktop 10
-Enabled=true
+Enabled=false
 path=/panel/desktopswitch/desktop_10
 
-[Alt%2B1.7]
-Comment=Switch to desktop 1
-Enabled=true
-path=/panel/desktopswitch/desktop_1
-
-[Alt%2B2.11]
-Comment=Switch to desktop 2
-Enabled=true
-path=/panel/desktopswitch/desktop_2
-
-[Alt%2B3.12]
-Comment=Switch to desktop 3
-Enabled=true
-path=/panel/desktopswitch/desktop_3
-
-[Alt%2B4.13]
-Comment=Switch to desktop 4
-Enabled=true
-path=/panel/desktopswitch/desktop_4
-
-[Alt%2B5.14]
-Comment=Switch to desktop 5
-Enabled=true
-path=/panel/desktopswitch/desktop_5
-
-[Alt%2B6.15]
-Comment=Switch to desktop 6
-Enabled=true
-path=/panel/desktopswitch/desktop_6
-
-[Alt%2B7.16]
-Comment=Switch to desktop 7
-Enabled=true
-path=/panel/desktopswitch/desktop_7
-
-[Alt%2B8.17]
-Comment=Switch to desktop 8
-Enabled=true
-path=/panel/desktopswitch/desktop_8
-
-[Alt%2B9.18]
-Comment=Switch to desktop 9
-Enabled=true
-path=/panel/desktopswitch/desktop_9
-
-[Alt%2BF1.1]
+[Alt%2BF1.2]
 Comment=Show/hide main menu
-Enabled=true
+Enabled=false
 path=/panel/mainmenu/show_hide
 
-[Alt%2BF2.2]
+[Alt%2BF2.3]
 Comment=Show/hide runner dialog
-Enabled=true
+Enabled=false
 path=/runner/show_hide_dialog
 
-[Alt%2BF5.38]
+[Alt%2BF5.4]
 Comment=Play pause
-Enabled=true
+Enabled=false
 Exec=playerctl, play-pause
 
-[Alt%2BF6.37]
+[Alt%2BF6.5]
 Comment=Skip
-Enabled=true
+Enabled=false
 Exec=playerctl, next
 
-[Alt%2BReturn.6]
-Comment=urxvt
-Enabled=true
-Exec=urxvt
-
-[Control%2BAlt%2BD.3]
+[Control%2BAlt%2BD.6]
 Comment=Show desktop
-Enabled=true
+Enabled=false
 path=/panel/showdesktop/show_hide
 
-[Control%2BAlt%2BE.4]
+[Control%2BAlt%2BE.7]
 Comment=Pcmanfm
-Enabled=true
+Enabled=false
 Exec=pcmanfm-qt
 
-[Control%2BAlt%2BI.5]
+[Control%2BAlt%2BI.8]
 Comment=Web browser
-Enabled=true
+Enabled=false
 Exec=xdg-open, about:blank
 
-[Control%2BF11.9]
+[Control%2BF1.9]
+Comment=Switch to desktop 1
+Enabled=false
+path=/panel/desktopswitch/desktop_1
+
+[Control%2BF11.10]
 Comment=Switch to desktop 11
-Enabled=true
+Enabled=false
 path=/panel/desktopswitch/desktop_11
 
-[Control%2BF12.10]
+[Control%2BF12.11]
 Comment=Switch to desktop 12
-Enabled=true
+Enabled=false
 path=/panel/desktopswitch/desktop_12
 
-[Meta%2B0.19]
+[Control%2BF2.12]
+Comment=Switch to desktop 2
+Enabled=false
+path=/panel/desktopswitch/desktop_2
+
+[Control%2BF3.13]
+Comment=Switch to desktop 3
+Enabled=false
+path=/panel/desktopswitch/desktop_3
+
+[Control%2BF4.14]
+Comment=Switch to desktop 4
+Enabled=false
+path=/panel/desktopswitch/desktop_4
+
+[Control%2BF5.15]
+Comment=Switch to desktop 5
+Enabled=false
+path=/panel/desktopswitch/desktop_5
+
+[Control%2BF6.16]
+Comment=Switch to desktop 6
+Enabled=false
+path=/panel/desktopswitch/desktop_6
+
+[Control%2BF7.17]
+Comment=Switch to desktop 7
+Enabled=false
+path=/panel/desktopswitch/desktop_7
+
+[Control%2BF8.18]
+Comment=Switch to desktop 8
+Enabled=false
+path=/panel/desktopswitch/desktop_8
+
+[Control%2BF9.19]
+Comment=Switch to desktop 9
+Enabled=false
+path=/panel/desktopswitch/desktop_9
+
+[Meta%2B0.20]
 Comment=Activate task 10
-Enabled=true
+Enabled=false
 path=/panel/taskbar/task_10
 
-[Meta%2B1.20]
+[Meta%2B1.21]
 Comment=Activate task 1
-Enabled=true
+Enabled=false
 path=/panel/taskbar/task_1
 
-[Meta%2B2.21]
+[Meta%2B2.22]
 Comment=Activate task 2
-Enabled=true
+Enabled=false
 path=/panel/taskbar/task_2
 
-[Meta%2B3.22]
+[Meta%2B3.23]
 Comment=Activate task 3
-Enabled=true
+Enabled=false
 path=/panel/taskbar/task_3
 
-[Meta%2B4.23]
+[Meta%2B4.24]
 Comment=Activate task 4
-Enabled=true
+Enabled=false
 path=/panel/taskbar/task_4
 
-[Meta%2B5.24]
+[Meta%2B5.25]
 Comment=Activate task 5
-Enabled=true
+Enabled=false
 path=/panel/taskbar/task_5
 
-[Meta%2B6.25]
+[Meta%2B6.26]
 Comment=Activate task 6
-Enabled=true
+Enabled=false
 path=/panel/taskbar/task_6
 
-[Meta%2B7.26]
+[Meta%2B7.27]
 Comment=Activate task 7
-Enabled=true
+Enabled=false
 path=/panel/taskbar/task_7
 
-[Meta%2B8.27]
+[Meta%2B8.28]
 Comment=Activate task 8
-Enabled=true
+Enabled=false
 path=/panel/taskbar/task_8
 
-[Meta%2B9.28]
+[Meta%2B9.29]
 Comment=Activate task 9
-Enabled=true
+Enabled=false
 path=/panel/taskbar/task_9
 
-[Print.29]
+[Print.30]
 Comment=screen shot
-Enabled=true
+Enabled=false
 Exec=lximage-qt, -s
 
-[Shift%2BControl%2BF6.30]
+[Shift%2BControl%2BF6.31]
 Comment=\x2600 \x2193
-Enabled=true
+Enabled=false
 Exec=lxqt-config-brightness, -d
 
-[Shift%2BControl%2BF7.31]
+[Shift%2BControl%2BF7.32]
 Comment=\x2600 \x2191
-Enabled=true
+Enabled=false
 Exec=lxqt-config-brightness, -i
 
-[XF86AudioLowerVolume.32]
+[XF86AudioLowerVolume.33]
 Comment=Decrease sound volume
-Enabled=true
+Enabled=false
 path=/panel/volume/down
 
-[XF86AudioMute.33]
+[XF86AudioMute.34]
 Comment=Mute/unmute sound volume
-Enabled=true
+Enabled=false
 path=/panel/volume/mute
 
-[XF86AudioRaiseVolume.34]
+[XF86AudioRaiseVolume.35]
 Comment=Increase sound volume
-Enabled=true
+Enabled=false
 path=/panel/volume/up
 
-[XF86MonBrightnessDown.35]
+[XF86MonBrightnessDown.36]
 Comment=\x2600 \x2193
-Enabled=true
+Enabled=false
 Exec=lxqt-config-brightness, -d
 
-[XF86MonBrightnessUp.36]
+[XF86MonBrightnessUp.37]
 Comment=\x2600 \x2191
-Enabled=true
+Enabled=false
 Exec=lxqt-config-brightness, -i
