--- a/.config/sway/config
+++ b/.config/sway/config
@@ -45,6 +45,7 @@ default_border none
 
 hide_edge_borders both
 
+for_window [title=".*"] split toggle
 for_window [title="Ulauncher"] floating enable
 for_float [title="Ulauncher"] move position center
 #for_window [window_role="pop-up"] floating enable
@@ -228,10 +229,10 @@ input "DLL0665:01 06CB:76AD Touchpad" {
     # You can "split" the current object of your focus with
     # $mod+b or $mod+v, for horizontal and vertical splits
     # respectively.
-    bindsym $mod+b splith
+    bindsym $mod+h splith
     bindsym $mod+v splitv
 
-    bindsym $mod2+b splith
+    bindsym $mod2+h splith
     bindsym $mod2+v splitv
 
     # Switch the current container between different layout styles
