--- a/.config/sway/config
+++ b/.config/sway/config
@@ -44,6 +44,7 @@ gaps outer 0
 default_border none
 
 hide_edge_borders both
+border pixel 1
 
 for_window [title=".*"] split toggle
 for_window [title="Ulauncher"] floating enable
