--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -62,7 +62,7 @@ signal=10
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-label=MEM
+label=🐏
 separator=false
 interval=30
 
@@ -78,7 +78,7 @@ interval=30
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=DSK
+label=💿
 #instance=/mnt/data
 interval=30
 
