--- a/.gitignore
+++ b/.gitignore
@@ -38,13 +38,13 @@
 !.gitignore
 
 # background
-!pictures
-!pictures/abstract-multicolor.jpg
+!img
+!img/abstract-multicolor.jpg
 
 # screenshot script
-!bin
-!bin/scripts
-!bin/scripts/screenshot.sh
+!dev
+!dev/screenshot
+!bin/screenshot/*
 
 # config
 !.config
