--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".vim/plugged/ale"]
 	path = .vim/plugged/ale
 	url = https://github.com/w0rp/ale
+[submodule ".LS_COLORS"]
+	path = .LS_COLORS
+	url = git@github.com:trapd00r/LS_COLORS.git
